package hospital;

import java.util.ArrayList;

/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
/**
 *
 * @author mekigelashvili
 */
public class Staff extends Employee {

    protected String id;
    protected String name;

    public Staff(String id, String name) {
        super(id, name);
    }
}
